--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile 'junit:junit:4.12'
+
 }
